--- a/relive/gui/menu.kv
+++ b/relive/gui/menu.kv
@@ -8,11 +8,17 @@
 <Test@TabbedPanel>:
     # size_hint: 1, 1
     # pos_hint: {'center_x': .5, 'center_y': .5}
+    id: tab_panel
     do_default_tab: False
     tab_pos: 'bottom_left'
     size_hint_x: 1.2
     id: menu
 
+    TabbedPanelItem:
+        id: home_tab
+        text: 'sets'
+        size_hint: 1, 1
+        Set
     TabbedPanelItem:
         size_hint: 1, 1
         text: 'pads'
@@ -20,17 +26,10 @@
     TabbedPanelItem:
         size_hint: 1, 1
         text: 'control'
-        Pad
-    TabbedPanelItem:
-        text: 'sets'
-        BoxLayout:
-            Label:
-                text: 'Second tab content area'
-            Button:
-                text: 'Button that does nothing'
+        Control
     TabbedPanelItem:
         text: 'mixer'
         Mixer
     TabbedPanelItem:
         text: 'settings'
-        on_press: app.open_settings(menu)
+        on_press: app.open_my_settings(menu)
